--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;  
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+
+.flex_sb {
+    display: flex;
+    justify-content: space-between;
+}
